# lazymode-model

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: training_data.json
models/: lazymode.pkl
notebooks/: lazymode_demo.ipynb
src/lazymode/: __init__.py  data.py  inference.py  model.py  train.py
tests/: __init__.py  test_lazymode.py
